fixing dropdown on mobile being unclickable on walletlookup page

--- a/main/static/main/custom.css
+++ b/main/static/main/custom.css
@@ -28,6 +28,14 @@ html {
     text-decoration: none;
 }
 
+.nav-link {
+  z-index:999;
+}
+
+.input-group {
+  z-index:1;
+}
+
 .row1 {
   height: max(35px, 2.431vw);
   margin-top: max(35px, 2.431vw) !important;
@@ -46,6 +54,7 @@ body {
   margin-right:auto !important;
   margin-bottom: 2px !important;
   white-space: nowrap !important;
+  position: relative;
 }
 
 .collapse {
@@ -108,6 +117,7 @@ body {
 .navbar {
     left: 0px !important;
     position: relative;
+
 }
 
 .navbar-toggler {
@@ -122,6 +132,7 @@ body {
 .navburg {
     position: absolute;
     width: 100%;
+    z-index: 999;
 }
   /* */
 .navbar-collapse.in {
